# inter_docker_communication

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yaml
cmake_server/: CMakeLists.txt
include/: image_inverting.h
producer-consumer/: Dockerfile.consumer  Dockerfile.producer  README.md  docker-compose.yaml
producer-consumer/cmake_consumer/: CMakeLists.txt
producer-consumer/cmake_producer/: CMakeLists.txt
producer-consumer/src/: consumer.cpp  producer.cpp
server-client/: Dockerfile.client  Dockerfile.server
server-client/cmake_client/: CMakeLists.txt
server-client/src/: image_inverting.cpp  server.cpp
src/: client.cpp  image_inverting.cpp  server.cpp
